Latest VLC 3.0 nightly build crashes when I open a file
With the latest build (2017-10-18), VLC 3.0 crashes when I open a file (or a network stream). Last lines in the log are : direct3d11 debug: Created the D3D11 device 0x0000000006812440 ctx 0x00000000068136d8 type 1 level b000. direct3d11 debug: Incompatible feature level 45056
Windows 10 / AMD Radeon HD 6450
All settings are set to default.