d3d11_fmt: fix crash when the feature level doesn't match

Also log the feature level as hexadecimal, it's easier to read.

Fixes #18941

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>